syntax = "proto3";
package pb;

option go_package = "document";

message Document{
    string database = 1;
    string collection = 2;
    string namespace = 3;
    map<string, bytes> data = 4;
    repeated string indices = 5;
}

message DocumentTransferRequest{
    Document request = 1;
}

message DocumentTransferResponse{
    string response = 1;
}

service DocumentService{
    rpc DocumentTransfer(DocumentTransferRequest) returns (DocumentTransferResponse){};
}




